# init

./: .envrc  .tool-versions  README.md  ansible.cfg  main.py  playbook.yml  pyproject.toml
docs/: NOTES.md  environment-guide.md  environment-management-guide.md  phase1-completion-report.md  phase2-completion-report.md  phase3-completion-report.md  phase4-completion-report.md  troubleshooting-guide.md
docs/plans/: ansible-orchestration-plan.md  architecture-implementation-plan.md  environment-management-plan.md  prepare-script-plan.md  project-coordination-plan.md  system-configuration-plan.md
docs/specs/: prd-ansible-orchestration.md  prd-architecture.md  prd-bootstrap.md  prd-environment-management.md  prd-system-configuration.md
inventory/: localhost.yml
inventory/group_vars/: all.yml  linux.yml  macos.yml
playbooks/: main.yml
playbooks/common/: development.yml  python.yml  shell.yml
playbooks/linux/: apk-based.yml  apt-based.yml  common.yml
playbooks/macos/: common.yml
scripts/: prepare  test-environment.sh  uv-tasks.sh  validate-ansible-setup  validate-environment.sh  validate-linux-phase2  validate-macos-phase3  validate-shell-phase4
templates/: 50unattended-upgrades.j2  starship.toml.j2  zsh-aliases.j2  zsh-exports.j2  zsh-functions.j2  zshrc-basic.j2  zshrc.j2
